<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="app_name">NotADoctor</string>


    <string name="present_risk_factor">Yes</string>
    <string name="absent_risk_factor">No</string>

    <string name="button_abort">Abort</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    <string name="button_submit">Submit</string>
    <string name="button_start_diagnose">Start diagnose</string>
    <string name="button_reenter_symptome">Reenter Symptoms</string>
    <string name="button_proceed_question">Proceed</string>
    <string name="button_pass_question">Pass</string>
    <string name="button_find_a_docotor">Find A Doctor</string>
    <string name="up_side_view">Expand condition</string>
    <string name="indicator_content">Indicates if condition is true or falls</string>
    <string name="welcome_title">Hello,\nwelcome to NotADoctor</string>
    <string name="welcome_text">I hope i can help you with this small app to find a suitable doctor in your area for your complaints. Please keep in mind that this app cannot replace the diagnosis by a doctor.</string>
    <string name="welcome_empty_view">Please add a user via the plus button to start.</string>

    <string name="radio_button_hypertension">Hypertension</string>
    <string name="radio_button_smoking">Smoking</string>

    <string name="mentions_page_text_success">I found these symptoms. If one of these symptoms is not correct please delete via swipe. If symptoms are missing please reenter your symptoms and try to be a little more specific. Thanks a lot.</string>
    <string name="place_search_critera">name,rating,formatted_phone_number</string>
    <string name="permission_denied">We can\'t search for any doctors without this permission</string>
    <string name="alert_dialog_delete_user_title">Delete %s ?</string>
    <string name="alert_dialog_delete_user_text">"Do you really want to delete this user?"</string>
    <string name="delete_user_toast">%s was deleted.</string>
    <string name="error_no_user">Please choose a valid user</string>
    <string name="error_no_mentions">We could not find any mentions please try again.</string>
    <string name="error_no_network">You are not connected to the Internet, please try again later.</string>
    <string name="error_something">Ooops something went wrong, please try again</string>
    <string name="error_no_conditions">We could not find any conditions please try again.</string>
    <string name="error_some_entrys_missing">Some entries are missing.</string>

    <string name="welcome_to_the_symptomes">Hi %s tell me your problems</string>


    <string name="hint_create_edit_name">Name</string>
    <string name="hint_create_edit_age">Age</string>
    <string name="hint_create_edit_height">Height in cm</string>
    <string name="hint_create_edit_weight">Weight in kg</string>
    <string name="hint_symptome_enter_symptome">Enter your symptoms here</string>

    <integer name="max_lenght_symptome_edit_text">400</integer>
    <integer name="max_lenght_create_name_edit_text">20</integer>
    <integer name="max_lenght_weight_height_edit_text">3</integer>
    <integer name="max_lenght_age_edit_text">2</integer>

    <string name="condition_name_label">Name:</string>
    <string name="condition_categories_label">Categories:</string>
    <string name="condition_prevalence_label">Prevalence:</string>
    <string name="condition_acuteness_label">Acuteness:</string>
    <string name="condition_severity_label">Severity:</string>

    <string name="marker_your_position">Your position</string>


    <string-array name="sex">
        <item>male</item>
        <item>female</item>
        <item>diverse</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_doctor">Map</string>

    <string name="call_this_doctor">Call  this doctor</string>

    <string name="transition_name">name</string>
    <string name="appwidget_content">NotADoctorApp</string>
    <string name="appwidget_default_text">Make a diagnose</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_default_text">No data for the widget list.</string>
</resources>
